# vexide-slint

./: Cargo.toml  README.md  armv7a-vex-v5.json  rust-toolchain.toml
.github/workflows/: build.yml
examples/: basic.rs
src/: lib.rs
